--- a/web/views/login/register.html
+++ b/web/views/login/register.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title langtag="title-login"></title>
+    <title langtag="title-register"></title>
 
     <!-- Mainly scripts -->
     <!-- Latest compiled and minified CSS -->
@@ -26,68 +26,49 @@
 <body class="gray-bg">
     <div class="row border-bottom">
         <nav class="navbar navbar-static-top navbar-right" role="navigation" style="margin: 20px 40px">
-<div></div>
-            <h1 style="margin:0px" class="navbar-header font-bold" langtag="application"></h1>
+            <div></div>
             <span class="btn-group dropdown">
                 <button id="languagemenu" class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-globe-asia fa-lg"></i><span></span></button>
                 <ul class="dropdown-menu"></ul>
             </span>
         </nav>
     </div>
-<div class="loginColumns animated fadeInDown mt-3 px-5">
-    <div class="row">
-
-        <div class="col-md-6 mt-3">
-            <h3 langtag="info-tagline"></h3>
-            <ul class="px-1 text-justify">
-                <li langtag="info-feature1"></li>
-            </ul>
+    <div class="middle-box text-center loginscreen   animated fadeInDown">
+        <div>
+            <h1 class="logo-name" langtag="application"></h1>
         </div>
-
-        <div class="col-md-6 mt-3">
-            <div class="ibox-content">
-                <form class="m-t" onsubmit="return false">
-                    <div class="form-group">
-                        <input name="username" class="form-control" placeholder="username" required="" langtag="word-username">
-                    </div>
-                    <div class="form-group">
-                        <input name="password" type="password" class="form-control" placeholder="password" required="" langtag="word-password">
-                    </div>
-                    <button onclick="login()" class="btn btn-primary block full-width m-b" langtag="word-login"></button>
-                {{if eq true .register_allow}}
-                    <p class="text-muted text-center"><small langtag="info-noaccount"></small></p>
-                    <a class="btn btn-sm btn-white btn-block" href="{{.web_base_url}}/login/register" langtag="word-register"></a>
-                {{end}}
-                </form>
+        <h3 langtag="info-register"></h3>
+        <p langtag="info-createaccount"></p>
+        <form class="m-t" role="form" onsubmit="return false">
+            <div class="form-group">
+                <input type="text" class="form-control" placeholder="username" name="username" required="" langtag="word-username">
             </div>
-        </div>
+            <div class="form-group">
+                <input type="password" class="form-control" placeholder="password" name="password" required="" langtag="word-password">
+            </div>
+            <button onclick="register()" type="submit" class="btn btn-primary block full-width m-b" langtag="word-register"></button>
+            <p class="text-muted text-center"><small langtag="info-haveaccount"></small></p>
+            <a class="btn btn-sm btn-white btn-block" href="{{.web_base_url}}/login/index" langtag="word-login"></a>
+        </form>
     </div>
     <hr/>
-    <div class="footer" style="position: unset;">
+    <div class="footer">
         <div class="pull-right">
             <span langtag="word-readmore"></span> <strong><a href="https://ehang.io/nps" langtag="word-go"></a></strong>
         </div>
-        <div><strong langtag="word-copyright"></strong> <span langtag="application"></span> &copy; 2018-2020</div>
+        <div><strong langtag="word-copyright"></strong> <span langtag="application"></span> &copy; 2018-2019</div>
     </div>
-</div>
-
-</body>
-</html>
-
-
-<script type="text/javascript">
+<script>
     window.nps = { "web_base_url": {{.web_base_url}} }
-    // Login Page Flipbox control
-    function login() {
+    function register() {
         $.ajax({
             type: "POST",
-            url: "{{.web_base_url}}/login/verify",
+            url: "{{.web_base_url}}/login/register",
             data: $("form").serializeArray(),
             success: function (res) {
+                alert(res.msg)
                 if (res.status) {
-                    window.location.href = "{{.web_base_url}}/index/index"
-                } else {
-                    alert(res.msg)
+                    window.location.href = "{{.web_base_url}}/login/index"
                 }
             }
         })
@@ -95,4 +76,5 @@
     }
 </script>
 </body>
+
 </html>
