--- a/web/views/client/edit.html
+++ b/web/views/client/edit.html
@@ -72,7 +72,7 @@
                         </div>
                     </div>
                 {{end}}
-                {{if eq true .allow_user_login}}
+                {{if eq true false}}
                 {{if or (eq true .allow_user_change_username) (eq true .isAdmin)}}
                     <div class="form-group" id="web_username">
                         <label class="control-label font-bold" langtag="word-webusername"></label>
