--- a/web/views/index/edit.html
+++ b/web/views/index/edit.html
@@ -43,6 +43,15 @@
                             <input value="{{.t.Remark}}" class="form-control" type="text" name="remark" placeholder="" langtag="info-unrestricted">
                         </div>
                     </div>
+					
+					<div class="form-group" {{if eq false .isAdmin}} style="display:none" {{end}}>
+                        <label class="col-sm-2 control-label font-bold" langtag="word-expiretime"></label>
+                        <div class="col-sm-10">
+							<input type="text" name="expire_time" class="form-control" value="{{.t.ExpireTime}}"  placeholder="留空则表示不受限制" readonly id="expiretime">
+                        </div>
+                    </div>
+					 
+					 
                 {{if eq true .allow_multi_ip}}
                     <div class="form-group" id="server_ip">
                         <label class="col-sm-2 control-label font-bold" langtag="word-serverip"></label>
@@ -150,5 +159,11 @@
         $("#use_client").on("change", function () {
             resetForm()
         })
+		
+		/* 第三步:初始化插件  */
+		laydate.render({
+			elem: '#expiretime' //指定元素
+			 ,type: 'datetime'
+		});
     })
 </script>
