--- a/web/views/index/list.html
+++ b/web/views/index/list.html
@@ -15,6 +15,7 @@
                         </a>
                     </div>
                 </div>
+				{{if eq true .isAdmin}}
                 <div class="content">
                     <div class="table-responsive">
                         <div id="toolbar">
@@ -24,6 +25,7 @@
                         <table id="taskList_table" class="table-striped table-hover" data-mobile-responsive="true"></table>
                     </div>
                 </div>
+				{{end}}
                 <div class="ibox-content">
 
                     <table id="table"></table>
@@ -177,6 +179,20 @@
                     }
                 }
             },
+			{
+                field: 'CreateTime',//域值
+                title: '<span langtag="word-createtime"></span>',//标题
+				align: 'center',
+                halign: 'center',
+                visible: true//false表示不显示
+            },
+			{
+                field: 'ExpireTime',//域值
+                title: '<span langtag="word-expiretime"></span>',//标题
+				align: 'center',
+                halign: 'center',
+                visible: true//false表示不显示
+            },
             {
                 field: 'option',//域值
                 title: '<span langtag="word-option"></span>',//内容
@@ -192,8 +208,10 @@
                         btn_group += "<a onclick=\"submitform('start', '{{.web_base_url}}/index/start', {\'id\':" + row.Id
                         btn_group += '})" class="btn btn-outline btn-primary"><i class="fa fa-play"></i></a>'
                     }
+					{{if eq true .isAdmin}}
                     btn_group += "<a onclick=\"submitform('delete', '{{.web_base_url}}/index/del', {'id':" + row.Id
                     btn_group += '})" class="btn btn-outline btn-danger"><i class="fa fa-trash"></i></a>'
+					{{end}}
                     btn_group += '<a  href="{{.web_base_url}}/index/edit?id=' + row.Id
                     btn_group += '" class="btn btn-outline btn-success"><i class="fa fa-edit"></i></a></div>'
                     return btn_group
