--- a/web/views/login/index.html
+++ b/web/views/login/index.html
@@ -65,9 +65,9 @@
     <hr/>
     <div class="footer" style="position: unset;">
         <div class="pull-right">
-            <span langtag="word-readmore"></span> <strong><a href="https://ehang.io/nps" langtag="word-go"></a></strong>
+            <span langtag="word-readmore"></span> <strong><a href="https://github.com/wyx176/nps-socks5" langtag="word-go"></a></strong>
         </div>
-        <div><strong langtag="word-copyright"></strong> <span langtag="application"></span> &copy; 2018-2020</div>
+        <div><strong langtag="word-copyright"></strong> <span langtag="application"></span> &copy; 2018-2060</div>
     </div>
 </div>
 
