--- a/web/views/public/layout.html
+++ b/web/views/public/layout.html
@@ -16,6 +16,7 @@
     <link href="{{.web_base_url}}/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{.web_base_url}}/static/css/bootstrap-table.min.css" rel="stylesheet">
     <link href="{{.web_base_url}}/static/css/style.css" rel="stylesheet">
+	 
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="{{.web_base_url}}/static/js/jquery-3.4.1.min.js"></script>
@@ -27,6 +28,7 @@
     <script src="{{.web_base_url}}/static/js/inspinia.js"></script>
     <!-- Latest compiled and minified Locales -->
     <script src="{{.web_base_url}}/static/js/language.js" type="text/javascript"></script>
+	<script src="{{.web_base_url}}/static/js/laydate.js" type="text/javascript"></script>
 
 </head>
 
