--- a/web/views/index/add.html
+++ b/web/views/index/add.html
@@ -41,7 +41,7 @@
                         <label class="control-label font-bold" langtag="word-remark"></label>
                         <div class="col-sm-10">
                             <input class="form-control" type="text" name="remark" placeholder=""
-                                   langtag="info-unrestricted">
+                                   langtag="word-remark">
                         </div>
                     </div>
 					<div class="form-group">
