--- a/web/views/index/edit.html
+++ b/web/views/index/edit.html
@@ -40,7 +40,7 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label font-bold" langtag="word-remark"></label>
                         <div class="col-sm-10">
-                            <input value="{{.t.Remark}}" class="form-control" type="text" name="remark" placeholder="" langtag="info-unrestricted">
+                            <input value="{{.t.Remark}}" class="form-control" type="text" name="remark" placeholder="" langtag="word-remark">
                         </div>
                     </div>
 					
